methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:21: error: too many arguments for method faireDiag: ()Unit
       faireDiag(c)
                ^PatternPicture:33: error: not found: value gauceh
  avance(3);gauceh()
            ^