methods.picture.PatternPicture.scala.code
def dessiner(){
  baisseBrosse()
  leveBrosse
}

def faireDiag(){
  gauche();avance()
  dessiner()
  for (k <- 1 to 2){
    droite()
    avance()
  }
  dessiner()
  gauche()
}

def faireMotif(c:Color){
  setCouleurBrosse(c)
  for (k <- 1 to 2){
    for (l <- 1 to 2){
       faireDiag(c)
      avance(3)
    }
    gauche();avance(4);droite()
  }
 
}

override def run() {
  faireMotif(Color.RED)
  avance(3);gauche()
  faireMotif(Color.BLUE)
  avance(3);gauceh()
  faireMotif(Color.GREEN)
  avance(3);gauche()
  faireMotif(Color.YELLOW)
  droite();avance();droite()
}